--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
     </footer>
 </body>
 
-<script src="\jQuery\jquery-3.6.3.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
 <script>
 
